--- a/pom.xml
+++ b/pom.xml
@@ -55,12 +55,12 @@
 		    <artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
 		<dependency>
-		    <groupId>jstl</groupId>
-		    <artifactId>jstl</artifactId>
-		    <version>1.2</version>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+
 
 
 
