--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-spring.mvc.view.prefix=/views/
-spring.mvc.view.suffix=.jsp
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/views/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+
+spring.messages.basename=messages
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/accu_protocols
 spring.datasource.username=healinghouse
@@ -12,3 +20,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 # ----------NOTES --------------
 # https://www.mastertungacupuncture.org/acupuncture/tung/points/sizhi-t-7720 : all master tung points to add.
+# https://www.jcm.co.uk/eight-treatment-methods-for-complicated-patterns-of-qi-and-blood.html
+# https://www.acusansthan-ald.in/one-point-acupressure-treatment
